# Quine_McCluskey_C-

./: CMakeLists.txt  README.md  main_functions.cc  main_functions.hpp  output.txt  quine_mcluskey.cpp  test_input.txt
